--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -13,14 +13,15 @@ body {
   background: #f8f8f9 0% 0% no-repeat padding-box;
 }
 .navbar img {
-  padding-left: 10px;
+  padding-left: 140px;
   margin-right: 639px;
 }
 .nav-links {
   display: flex;
+  margin-left: -100px;
 }
 .nav-links p {
-  padding-right: 40px;
+  padding-right: 30px;
   text-transform: uppercase;
   font: normal normal bold 12px/15px Montserrat;
   font-weight: bold;
@@ -31,6 +32,7 @@ body {
 .user-group {
   display: flex;
   align-items: center;
+  padding-right: 140px;
 }
 .sign-in-group {
   display: flex;
@@ -60,8 +62,8 @@ body {
   display: flex;
   flex-direction: row;
   margin-top: 34px;
-  margin-left: 170px;
-  margin-right: 170px;
+  margin-left: 310px;
+  margin-right: 310px;
   background: #f8f8f9 0% 0% no-repeat padding-box;
 }
 .dashboard {
@@ -132,9 +134,10 @@ body {
   background: #6b00bc 0% 0% no-repeat padding-box;
   border-radius: 10px;
   opacity: 1;
-  padding: 26px 24px 20px 20px;
-  width: 280px;
+  padding: 26px 20px 24px 20px;
+  width: 240px;
   margin-right: 60px;
+  margin-bottom: 50px;
 }
 
 #amount {
@@ -151,9 +154,8 @@ body {
   background: #e8ecf1 0% 0% no-repeat padding-box;
   border-radius: 20px;
   opacity: 1;
-  width: 320px;
-  margin-right: 65px;
-  margin-top: 50px;
+  width: 280px;
+  margin-right: 60px;
   /* padding: 11px 0px; */
   font: normal normal normal 14px/40px Montserrat;
   color: #728391;
@@ -164,18 +166,19 @@ body {
   box-shadow: 0px 10px 20px #0062ff4d;
   border-radius: 20px;
   opacity: 1;
-  width: 320px;
-  margin-right: 65px;
-  margin-top: 50px;
+  width: 280px;
+  margin-right: 60px;
   /* padding: 11px 0px; */
   font: normal normal normal 14px/40px Montserrat;
   color: #ffffff;
 }
+
 .workshop {
   margin-top: 30px;
   background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 0px 5px 10px #01368619;
   border-radius: 10px;
+  width: 960px;
 }
 .workshop-content {
   padding-top: 20px;
