--- a/Styles/message.css
+++ b/Styles/message.css
@@ -338,3 +338,12 @@ body {
 #profile-btn {
   cursor: pointer;
 }
+.notification {
+  position: absolute;
+  background: #df0000;
+  color: white;
+  padding: 1px 6px 2px 7px;
+  border-radius: 50%;
+  top: 928px;
+  left: 354px;
+}
