--- a/Styles/message.css
+++ b/Styles/message.css
@@ -143,7 +143,7 @@ body {
   background: #f8f8f9 0% 0% no-repeat padding-box;
   border-radius: 25px;
   opacity: 1;
-  padding: 10px 0px 12px 38px;
+  padding: 10px 0px 12px 60px;
   text-align: left;
   font: normal normal normal 14px/29px Open Sans;
   letter-spacing: 0px;
@@ -346,4 +346,10 @@ body {
   border-radius: 50%;
   top: 928px;
   left: 354px;
+}
+.fa-search {
+  position: absolute;
+  color: #728391;
+  top: 132px;
+  left: 730px;
 }
