--- a/styles.css
+++ b/styles.css
@@ -690,19 +690,18 @@ body {
 }
 .type-box input {
   width: 490px;
-  height: 50px;
+  /* height: 50px; */
   margin: 5px 10px 5px 10px;
   background: #ffffff 0% 0% no-repeat padding-box;
   border-radius: 25px;
   opacity: 1;
   border: none;
   text-align: left;
-  font: normal normal normal 14px/29px Open Sans;
+  font: normal normal normal 14px Open Sans;
   letter-spacing: 0px;
   color: #728391;
   opacity: 1;
   padding-left: 28px;
-  /* padding: 14px 0px 17px 28px; */
 }
 .type-box {
   display: flex;
